--- a/Dictaiphone/Info.plist
+++ b/Dictaiphone/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSRemindersUsageDescription</key>
+	<string>This app needs access to create reminders based on action items.</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>OPENAI_API_KEY</key>
