--- a/Dictaiphone/Info.plist
+++ b/Dictaiphone/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Fonts/Inter-Bold.otf</string>
+		<string>Fonts/Inter-Medium.otf</string>
+	</array>
 	<key>NSRemindersUsageDescription</key>
 	<string>This app needs access to create reminders based on action items.</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
